--- a/stylesheets/jquery.liveSearch.css
+++ b/stylesheets/jquery.liveSearch.css
@@ -17,8 +17,8 @@ box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
 #search {
-margin: 4px;
-font-size: 8pt;
+margin: 11.428571428571%;
+font-size: 85%;
 }
 
 .search_result table {
