--- a/stylesheets/breathe/puavo.css
+++ b/stylesheets/breathe/puavo.css
@@ -9,7 +9,7 @@ body {
     color-stop(0.6, rgb(170,170,170))
   );
   background-image: -o-linear-gradient(top,rgb(170,170,170),rgb(242,242,242));
-  font-family: "Cronos Pro","Myriad Web Pro","Myriad Pro","Myriad","Helvetica Neue LT Std",Calibri,Arial,sans-serif;
+  font-family: "Helvetica Neue", Helvetica,Calibri,Arial,sans-serif;
   font-size: 0.8em;
   line-height: 1.5;
   margin: 0;
@@ -25,7 +25,6 @@ h1 {
 }
 
 #container{
-  height: auto !important;
   height: 100%;
   margin:0;
 }
@@ -36,7 +35,6 @@ h1 {
   box-shadow: 0 5px 10px rgba(68, 68, 68, 0.7);
   margin: 25px auto;
   max-width: 950px;
-  min-width: 480px;
   padding: 5px 10px 0;
   width: 90%;
   -moz-border-radius: 10px 10px 0 0;
@@ -44,19 +42,237 @@ h1 {
   -moz-box-shadow: 0px 15px 15px rgba(68, 68, 68, 0.70);
   -webkit-box-shadow: 0px 15px 15px rgba(68, 68, 68, 0.70);
 }
-@media all and (max-width: 762px) {
+@media all and (max-width: 800px) {
+  #navbar_second_level, .container_wrap{
+    border-radius:0;
+    -moz-border-radius:0;
+    -webkit-border-radius:0;
+  }
+  body{
+    font-size: 72.777% !important;
+  }
+  .topNavContainer{
+    display: block;
+    height: 2.7em;
+    position: static;
+  }
+  .topNavContentContainer{
+    width: 95%;
+  }
+  .topNavContainer input{
+    margin-top: 3% !important;
+    width: 10em;
+  }
+  #top-menu-right li:last-of-type{
+    line-height: 1.75;
+  }
+  ul.menu li.login_username_description{
+    display: none;
+  }
+  .login_container{
+    margin: 0;
+    width: 98%;
+  }
   .container_wrap{
-    margin: 50px auto;
+    border: none !important;
+    margin:0;
+    padding: 0;
+    width: 100%;
+  }
+  .wrap{
+    border: none !important;
+    border-radius: 0 !important;
+    -moz-border-radius: 0 !important;
+    -webkit-border-radius: 0 !important;
+    margin: 0 !important;
+    padding-bottom: 2%;
+  }
+  .maincontent{
+    float: none !important;
+    margin: 0 !important;
+    padding: 0.5% 0 !important;
+    position: relative;
+    width: 100% !important;
+  }
+  .content_wrapper{
+    padding: 2%;
+  }
+  .maincontent .content_wrapper h1{
+    padding-left: 0 !important;
+  }
+  div:not(#navbar_second_level) .wrap:first-of-type .maincontent{ 
+    margin: 3% 0 0;
+  }
+  .maincontent h1{
+    font-size: 180% !important;
+  }
+  .maincontent .dashboard{
+    width: 100%;
+  }
+  .container_wrap > h1{
+    margin-top: 0 !important;
+    padding-top: 1%;
+  }
+  .dashboard_box.school_image{
+    padding-left: 1.5%;
+  }
+  .dashboard_box h3, .show_user h3{
+    padding:1.5%;
+  }
+  .maincontent h1{
+    padding: 1.5% 0 0 1.5% !important;
+  }
+  div.organization{
+    width: 100%;
+  }
+  table.list{
+    width: 100%;
+  }
+  .message_error, .message_notice, .message_success, .notice, .message_alert{
+    margin: 2% 2.5% 1% 2.5%;
+  }
+  .dashboard_box, .user_box, .dashboard_box h3, .show_user h3{
+    border-radius: 0 !important;
+    -moz-border-radius: 0 !important;
+    -webkit-border-radius: 0 !important;
+    margin:0 !important;
+    width: 100% !important;
+  }
+  #this_school_admin_users .row, #other_admin_users .row{
+    padding: 1% 2% !important;
+  }
+  .required_info{
+    margin-left: 2%;
+  }
+  form table:not(.validate_users_list) th, form table:not(.validate_users_list) td, form table:not(.validate_users_list) caption { 
+    display: block !important;
+    text-align: left !important;
+    width: 95% !important;
+  }
+  form tr td input[type="text"], form tr td input[type="password"], form tr td input[type="email"], form tr td input[type="tel"], form input[type="text"] {
+    width: 95%;
+  }
+  form table, .new_external_service table, .edit_external_service table {
+    margin: 2%;
+    width: 95%;
+  }
+  .new_external_service tr td:nth-child(even), .new_external_service tr td:nth-child(odd), .edit_external_service tr:nth-child(even), .edit_external_service tr:nth-child(odd){
+    width: 95% !important;
+  }
+  form table:not(.validate_users_list) tr {
+    display: block !important;
+  }
+  table#autopoweroff th{
+    display: inline-block !important;
+    width: auto !important;
+  } 
+  table#autopoweroff td.checkbox {
+    display: inline-block !important;
+    width: 10% !important;
+    text-align: center !important;
+  }
+  table#autopoweroff td, table#autopoweroff td.label_td {
+    display: inline-block !important;
+    width: 30% !important;
+  }
+  .show_user table.list td{
+    display: inline-block;
+  }
+  .show_user table.list td.value_td{
+    padding-left: 1em;
+  }
+  .show_user table.list td.value_td{
+    text-align: left !important;
+  }
+  .mass_import_info, .mass_import_info_text{
+    padding: 2%;
+  }
+  form[action$="import/validate"] p, form[action$="import/refine"] p, form[action$="import/refine"] pre{
+    padding: 0 0 0 2%;
+  }
+  .mass_import_form input{
+    margin-left: 2%;
+  }
+  textarea#raw_users{
+    margin-left: 2%;
+    width: 90% !important;
+  }
+  .mass_import_form {
+    width: 90% !important;
+  }
+  form table.import_define th, form table.import_define td {
+    width: 45% !important;
+    display: inline-block;
+  }
+} 
+@media screen and (orientation: portrait) and (max-device-width: 800px){
+  .container_wrap > h1{
+    margin-top: 1.2em !important;
+  }
+  .maincontent{
+    padding-top: 5% !important;
+  }
+}
+@media screen and (orientation: landscape) and (max-device-width: 960px){
+  div:not(#navbar_second_level) .wrap:first-of-type {
+    margin: 2em 0 0 !important;
+  }
+  .container_wrap{
+    margin: 3em 0 0 !important;
+  }
+}
+@media screen and (orientation: portrait) and (max-device-width: 540px){
+  div:not(#navbar_second_level) .wrap:first-of-type {
+    margin: 1em 0 0 !important;
+  }
+  .container_wrap{
+    margin: 3em 0 0 !important;
+  }
+}
+@media all and (max-width:540px){
+  body{
+    font-size: 65% !important;
+  }
+  #top-menu{
+    padding: 0;
+  }
+  #top-menu > li{
+    margin-right: 5px;
+  }
+  #top-menu-right .login_username{
+    display: none;
+  }
+  #top-menu-right li a[onclick]{
+    line-height: inherit;
+    margin: -2px 0 0 0;
+    padding: 3px 2px;
+    width: 3.25em;
+  }
+  #top-menu-right li a[onclick] {
+    background: url("../../images/iconset-breathe.png") no-repeat scroll center -955px #AD0000;
+    text-indent: -9999px;
+  }
+  #top-menu-right li a[onclick]:hover{
+    background: url("../../images/iconset-breathe.png") no-repeat scroll center -955px #DA0000;
+  }
+  .container_wrap > h1{
+    margin-top: 0 !important;
+  }
+  .mass_import_info span {
+    display: block;
+  }
+  img{
+    max-width: 97.5%;
   }
 }
 .maincontent {
   float: left;
-  margin: 1em 0 0 20px;
+  margin: 1% 0 0 2%;
   padding: 0 0 10px;
-  width: 97%;
+  width: 95%;
 }
 .maincontent h1 {
-  font-size: 2.5em;
+  font-size: 220%;
   line-height: 1.2em;
   margin: 0 0 10px;
   padding: 0;
@@ -68,18 +284,19 @@ h1 {
   background: none repeat scroll 0 0 #FFFFFF;
   border-bottom: 1px solid #222222;
   border-left: 1px solid #222222;
-  border-radius: 0 0 0 10px;
   border-right: 1px solid #222222;
-  margin: 5px 0 1em;
-  overflow: auto;
-  width: 100%;
+  border-radius: 0 0 0 10px;
   -moz-border-radius:0 0 0 10px;
   -webkit-border-radius:0 0 0 10px;
+  margin: 5px 0 1em;
+  /*overflow-y: auto; 
+  overflow-x: hidden;*/
+  width: 100%;
 }
 .container_wrap > h1 {
-  font-size: 26pt;
+  font-size: 250%;
   font-variant: small-caps;
-  margin: 15px 10px 0;
+  margin: 10px 10px 0;
 }
 .logo{
   float: right;
@@ -108,7 +325,6 @@ h1 {
 .tools .tool ul{
   display: none;
 }
-
 
 .tools .tool ul {
   border: 1px solid #AAAAAA;
@@ -159,10 +375,10 @@ h1 {
 .cancel a {
   color: #AA1133;
   font-weight: normal;
-  height: 24px;
   margin: 0 0 0 1em;
   padding:0;
   text-align: center;
+  vertical-align: text-top;
 }
 .cancel a:hover {
   color: #AA1133;
@@ -172,13 +388,13 @@ h1 {
   border-color: #222222;
   border-style: solid;
   float: right;
-  font-size: 10pt;
-  margin: 0 1em .2em;
+  font-size: 90%;
+  margin: 5px 1em .2em;
   padding: 0;
 }
 .cancel {
   display:inline;
-  font-size: 11pt;
+  font-size: 100%;
   margin:0;
   padding: 0;
   width:100px;
@@ -248,9 +464,6 @@ background: url("../../images/iconset-breathe.png") no-repeat scroll left -150px
     background: url("../../images/iconset-breathe.png") no-repeat scroll center -670px transparent;
     cursor:pointer;
 }
-
-
-
 a[href*="import/download.pdf"] {
   color: #F44000;
   font-size: 1.5em;
@@ -272,15 +485,10 @@ a[href*="import/download.pdf"] {
 table.list td a[href$="edit"],
 table.list td a[onclick],
 table.list td a[href$="automounts"] {
-  border-radius: 2px;
-  background: none repeat scroll 0 0 #F3E2D0;
-  border: 1px solid #AAAAAA;
   float: left;
   margin: 0;
   padding: 2px 4px;
   text-align: center;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
 }
 table.list td a[href$="edit"]:hover,
 table.list td a[onclick]:hover,
@@ -289,10 +497,10 @@ table.list td a[href$="automounts"]:hover {
 }
 tbody a {
   font-weight: bold;
-  text-decoration: none;
+  text-decoration: underline;
 }
 tbody th {
-  font-size: 9pt;
+  font-size: 110%;
   font-weight: bold;
   text-decoration: none;
 }
@@ -357,11 +565,11 @@ a:hover {
 .login_container {
   background: none repeat scroll 0 0 #E5E2DE;
   box-shadow: 0 4px 8px #222222;
-  margin: 100px auto;
-  width: 500px;
-  padding: 10px;
   -moz-box-shadow: 0 4px 8px #222222;
   -webkit-box-shadow: 0 4px 8px #222222;
+  margin: 10% auto;
+  padding: 1%;
+  width: 60%;
 }
 
 .login_content {
@@ -372,7 +580,7 @@ a:hover {
   color: #2D2D2D;
   font-size: 2.2em;
   font-weight: bold;
-  letter-spacing: -3px;
+  letter-spacing: -1px;
   text-align: center;
   text-shadow: 2px 2px 1px #D6D6D6;
   text-transform: uppercase;
@@ -445,9 +653,9 @@ display: block;
 margin: 0 0 0.5em;
 width: auto !important;
 }
-.login_content form table td{
+/*.login_content form table td{
   float:left;
-}
+}*/
 .login_content a {
   font-size: 11px;
   font-weight: bold;
@@ -499,15 +707,21 @@ input {
   padding: 5px;
 }
 select {
+  background-color: white;
+  border: 1px solid #BBB;
   font-size: 1.4em;
   font-weight: normal;
+  height: 30px;
   margin: 0 0 5px;
-  padding: .1em 0;
-  width: 120px;
+  padding: .2em 0;
+  width: 100%;
+}
+.required > .fieldWithErrors{
+  display: inline;
 }
 .required_info {
   color:#FF6666;
-  font-size:12pt;
+  font-size:120%;
 }
 .required::after {
   color: #FF6666;
@@ -516,15 +730,13 @@ select {
 }
 .required_role {
   color: #FF6666;
-  font-size: 12pt;
-  line-height:2.3;
+  font-size: 100%;
 }
 label {
   color: #222222;
-  font-size: 11pt;
+  font-size: 100%;
   font-weight: bold;
   margin: 0 0 0 2px;
-  text-shadow: 0 1px 3px #CCCCCD;
 }
 .label_for_checkbox_list {
     vertical-align: top;
@@ -539,10 +751,10 @@ label {
 .user_box tr{
   border-bottom: 1px solid #AAAAAA;
   display: block;
-  width: 400px;
+  width: 100%;
 }
 .label_td.view {
-  width: 135px;
+  width: 55%;
 }
 .widelist {
   width:100%;
@@ -551,17 +763,26 @@ table.list {
   border-spacing: 0;
   margin-right: 1em;
 }
+.show_user table.list td{
+  border: none;
+  display: inline-block;
+  width: 40%;
+}
+.show_user table.list td.value_td{
+  width: 50%;
+}
 .list tr:hover {
   background: #F9F7E6 !important;
 }
-.list tr:nth-child(even) {
+.list tr:nth-child(even), .dashboard_box table tr:nth-child(even) {
   background:none repeat scroll 0 0 #FAFAFA;
 }
-.list tr:nth-child(odd) {
+.list tr:nth-child(odd), .dashboard_box table tr:nth-child(odd) {
   background: none repeat scroll 0 0 #F1F1F1;
 }
 .list td {
   border-bottom: 1px solid #AAAAAA;
+  word-wrap: break-word;
 }
 .list > tbody > tr th {
   background: none repeat scroll 0 0 #A36A2A;
@@ -577,12 +798,13 @@ table.list {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#BA722D, endColorstr=#A36A2A);
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#BA722D, endColorstr=#A36A2A)";
   border-bottom: 1px solid #222222;
-  color: #E9E9A9;
-  font-size: 10pt;
+  color: #F5F5E8;
+  font-size: 100%;
   padding-bottom: 10px;
   padding-top: 10px;
-  text-shadow: 0 1px 0 #3D3828;
+  word-wrap: break-word;
 }
+
 .label_error {
   color: #AD0000;
 }
@@ -612,16 +834,18 @@ table.list {
   float: left;
   font-size: 1.1em;
   margin-top: 5px;
+  min-width: 45%;
   overflow: hidden;
   padding: 0 0 5px;
-  width: 420px;
   -moz-border-radius: 6px 6px 6px 6px;
   -webkit-border-radius: 6px 6px 6px 6px;
+  width: 45%;
 }
 
 .maincontent .dashboard{
   float:left;
   margin: 5px 0 0;
+  width: 100%;
 }
 .dashboard_box.users {
   clear: both
@@ -640,7 +864,7 @@ table.list {
   border-bottom: 2px solid;
   clear: both;
   margin: 0 0 5px;
-  padding: 5px 0 5px 5px;
+  padding: 5px 0 5px 10px;
 }
 .dashboard_box h3, .show_user h3 {
   background: none repeat scroll 0 0 #A36A2A;
@@ -659,7 +883,6 @@ table.list {
   color: #E6E6D8;
   margin: 0;
   padding: 10px;
-  text-shadow: 0 1px 0 #3D3828;
   -moz-border-radius: 6px 6px 0 0;
   -webkit-border-radius: 6px 6px 0 0;
 }
@@ -695,25 +918,68 @@ table.list {
   float:left;
   margin: 0 2px 0 0;
 }
-.dashboard .school_admins a, .dashboard .other_admins a {
-  background: none repeat scroll 0 0 #F3E2D0;
+.btn{
+  color: #333;
+  cursor: pointer;
+  background-color: #f5f5f5;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
+  background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+  background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6);
+  background-repeat: repeat-x;
   border: 1px solid #AAAAAA;
   border-radius: 2px 2px 2px 2px;
-  float: right;
-  font-weight: bold;
-  margin: -3px 0 0;
-  padding: 2px 4px;
-  text-align: center;
   -moz-border-radius: 2px 2px 2px 2px;
   -webkit-border-radius: 2px 2px 2px 2px;
+  font-size: 90%;
+  font-weight: normal;
+  padding: 0.75% 1.5%;
+  text-align: center;
+  text-decoration: none;
+}
+.btn-danger{
+  background-color: #AD0000;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#AD0000), to(#8F0000));
+  background-image: -webkit-linear-gradient(top, #AD0000, #8F0000);
+  background-image: -o-linear-gradient(top, #AD0000, #8F0000);
+  background-image: linear-gradient(to bottom, #AD0000, #8F0000);
+  background-image: -moz-linear-gradient(top, #AD0000, #8F0000);
+  background-image: -ms-linear-gradient(top, #AD0000, #8F0000);
+  background-repeat: repeat-x;
+  color:#fff;
+}
+.btn-success{
+  background-color: #4E9E4E;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4E9E4E), to(#51a351));
+  background-image: -webkit-linear-gradient(top, #4E9E4E, #51a351);
+  background-image: -o-linear-gradient(top, #4E9E4E, #51a351);
+  background-image: linear-gradient(to bottom, #4E9E4E, #51a351);
+  background-image: -moz-linear-gradient(top, #4E9E4E, #51a351);
+  background-image: -ms-linear-gradient(top, #4E9E4E, #51a351);
+  background-repeat: repeat-x;
+  color:#fff;
+}
+.btn-danger:hover{
+  background: #bd362f;
+  color: #ffffff;
+  z-index: 999;
+}
+.btn-success:hover{
+  background: #54B954;
+  color: #ffffff;
+}
+.dashboard .school_admins a, .dashboard .other_admins a {
+  float: right;
+  margin: 0;
+  font-weight: normal;
+ 
 }
 .row .admin_display_name{
+  display: inline-block;
   float:none;
-  width:85%;
-}
-.dashboard .school_admins a:hover,
-.dashboard .other_admins a:hover {
-  background-color: #BD966A;
+  width:80%;
 }
 #admin_users_list{
   max-width:905px;
@@ -730,9 +996,11 @@ table.list {
 
 .validate_users_list {
   border-collapse: collapse;
+  width: 100%;
 }
 .validate_users_list td {
   border: 1px solid black;
+  overflow: hidden;
 }
 .validate_users_list td form * {
   width: auto !important;
@@ -745,7 +1013,10 @@ td.action {
   border: medium none;
 }
 .destroy {
+  color: #A13;
   display: none;
+  line-height: 2;
+  padding-left: .5em;
 }
 #user_mail_list input {
   display: block;
@@ -774,16 +1045,23 @@ label.checkbox {
   );
   background-image: -o-linear-gradient(top,rgb(186,114,45),rgb(153,106,42));
 }
+textarea#raw_users{
+  width: 100%;
+}
 .mass_import_info{
   font-family:  'Helvetica Neue',Arial,Helvetica,sans-serif;
-  font-size: 10pt;
+  font-size: 100%;
 }
 .mass_import_info span.current{
-  font-size: 12pt;
+  font-size: 110%;
   font-weight: bold;
 }
 .mass_import_info span.done{
   color: #CCCCCC;
+}
+.mass_import_info_text{
+  font-weight: bold;
+  margin-top: 1.5em;
 }
 .mass_import_form{
   width:460px;
@@ -795,6 +1073,7 @@ label.checkbox {
 
 table#autopoweroff td {
   display: table-cell;
+  text-align: left;
   width: auto;
 }
 
