--- a/stylesheets/jquery.liveSearch.css
+++ b/stylesheets/jquery.liveSearch.css
@@ -2,18 +2,18 @@
 background: #FFFFFF;
 border: 1px solid #CCCAAA;
 border-width: 0 1px 1px 1px;
-margin: 0 1em 0 0;
-max-height: 350px;
-max-width: 800px;
-min-width: 450px;
-overflow: auto;
-padding: 5px 10px;
-position: absolute;
-width: auto;
-z-index: 9999;
 -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
 -moz-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
 box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+margin: 0 1em 0 0;
+max-height: 350px;
+max-width: 700px;
+overflow: auto;
+padding: 1%;
+position: fixed;
+top: 2.7em !important;
+width: 45%;
+z-index: 9999;
 }
 
 #search {
@@ -25,6 +25,7 @@ font-size: 85%;
 border-spacing:0;
 margin: 0px;
 padding: 0px;
+width: 100%;
 }
 
 .search_result th {
@@ -41,4 +42,16 @@ padding: 5px;
 .search_result legend {
 padding-left: 2px;
 padding-right: 2px;
+}
+
+@media all and (max-width: 800px){
+  #jquery-live-search{
+    left: 0 !important;
+    max-width: 100%;
+    position: absolute;
+    width: 100%;
+  }
+  fieldset.search_result{
+    width: 96%;
+  }
 }
