--- a/stylesheets/breathe/topmenu.css
+++ b/stylesheets/breathe/topmenu.css
@@ -5,7 +5,7 @@
   line-height: 3em;
   list-style: none outside none;
   margin: 0;
-  padding: 0 5px 0 10px;
+  padding: 0 5px;
   text-transform: uppercase;
   z-index: 1000;
 }
