--- a/stylesheets/breathe/puavo.css
+++ b/stylesheets/breathe/puavo.css
@@ -467,6 +467,7 @@ table.list td a[onclick],
 table.list td a[href$="automounts"] {
   float: left;
   margin: 0;
+  max-width: 100%;
   padding: 3px 6px;
   text-align: center;
 }
