--- a/stylesheets/breathe/puavo.css
+++ b/stylesheets/breathe/puavo.css
@@ -936,7 +936,7 @@ table.list {
   -webkit-border-radius: 2px 2px 2px 2px;
   font-size: 90%;
   font-weight: normal;
-  padding: 0.75% 1.5%;
+  padding: 5px 10px;
   text-align: center;
   text-decoration: none;
 }
@@ -965,7 +965,6 @@ table.list {
 .btn-danger:hover{
   background-color: #bd362f;
   color: #ffffff;
-  z-index: 999;
 }
 .btn-success:hover{
   background: #54B954;
